rhdlc/test/compile-fail/multiple-definition-struct-mod/expected.txt
error: the name `b` is defined multiple times
 --> top.rhdl:1:7
  |
1 | struct b {}
  |        ^ previous definition of the type `b` here
2 | mod b {}
  |     - `b` redefined here
